--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: Platane/snk@v2
+      - name: Generate Snake SVG
+        uses: Platane/snk@v2
         with:
           github_user_name: irushub
-          output: dist/snake.svg
+          outputs: dist/snake.svg
 
       - name: Deploy to GitHub Pages
         run: |
